[package]
name = "pigeon-server"
version = "0.1.0"
edition = "2021"
authors = ["Flippette <quangdatle2006@outlook.com>"]
license = "MIT"

[dependencies]
tokio.workspace = true
serde.workspace = true
color-eyre.workspace = true
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
bcrypt.workspace = true
serde_json.workspace = true
axum.workspace = true
tracing-subscriber.workspace = true
